# dotfiles

./: .Xresources  .bash_aliases  .gitconfig  .gitignore  .gitmodules  .vimrc  .xinitrc  CLAUDE.md  README.md  Xresources  bash_aliases  bash_functions  bashrc  dunstrc  gitconfig  install  install-desktop.conf.yaml  install.conf.yaml  profile  provision-lib.sh  provision-shell.sh  provision.sh  redshift.conf  starship.toml  tmux.conf  vimrc
.config/Code/: Cookies  Network Persistent State  TransportSecurity  machineid  rapid_render.json  storage.json
.config/polybar/: config  config.ini
.config/ranger/: history
.github/workflows/: ci.yml
bash/: bash_aliases  bashrc  profile
bspwm/: monitor-manager.py  pyproject.toml
bspwm/lib/: coordinator.py  exceptions.py  executor.py  plan.py  preferences.py
bspwm/lib/probe/: bspwm.py  xrandr.py
bspwm/lib/state/: hardware.py
bspwm/profiles/: defaults.yaml  personal-home.yaml  personal-solo.yaml  work-office-2.yaml  work-solo.yaml
bspwm/scripts/: capture-fixture.sh  monocle-border.sh  redact-edid.py
bspwm/tests/: test_cli.py  test_ops.py
bspwm/tests/fixtures/bspc/: personal-solo-dump.json
bspwm/tests/fixtures/xrandr/: personal-solo-props.txt
claude/: CLAUDE.md  status-line.sh
desktop-environment/: dunstrc  install  picom.conf  provision.sh
docs/: airpods-linux.md  desktop-environment-prd.md
git/: gitmessage
kitty/: launch.sh  zenmode.py
shell-env/: README.md  install.conf.yaml  lazygit.yml  provision.sh
systemd/: swapescape.service
tmux/: settings.conf  tmux.conf  tpm.conf
vim/: .netrwhist
(+1077 files in other folders)
